# sitevpn

./: .env  .env.example  Dockerfile  README.md  USAGE_AND_TESTS.md  alembic.ini  docker-compose.yml  generate_project.sh  pyproject.toml  requirements.txt
frontend/: app.js  dashboard.html  forgot-password.html  index.html  login.html  register.html  styles.css  tariffs.html
src/: main.py
src/api/: router.py
src/api/v1/: __init__.py  admin.py  auth.py  payments.py  subscriptions.py  users.py
src/application/: auth_service.py  payment_service.py  subscription_service.py  user_service.py  vpn_service.py
src/core/: config.py  dependencies.py  exceptions.py  logging.py  middleware.py  security.py
src/db/: models.py  session.py
src/db/migrations/: env.py
src/domain/: entities.py  enums.py  payment.py  subscription.py  user.py  vpn.py
src/infrastructure/: brute_force.py  email_sender.py  payment_provider.py  redis.py  redis_client.py  remnawave_client.py
src/infrastructure/clients/: remnawave_client.py
src/infrastructure/payments/: base.py  stripe_provider.py
src/infrastructure/repositories/: base.py  payment_repository.py  subscription_repository.py  tariff_repository.py  user_repository.py  vpn_repository.py
src/tasks/: celery_app.py  email_tasks.py  jobs.py  subscription_tasks.py
tests/: conftest.py  test_auth.py  test_subscription.py  test_vpn_service.py
tests/integration/: test_register_and_subscribe.py
tests/unit/: test_payment_webhook.py  test_subscription_service.py
vpn_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+11 files in other folders)
